# UdemyCmake_Template

2_CMake/1_HelloWorld/: CMakeLists.txt
2_CMake/2_BasicProject/: CMakeLists.txt
2_CMake/3_IntermediateProject/: CMakeLists.txt
2_CMake/4_VariablesAndOptions/: CMakeLists.txt  Makefile
2_CMake/4_VariablesAndOptions/app/: main.cpp
2_CMake/5_ConfigureFile/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/app/: CMakeLists.txt  main.cpp
2_CMake/6_SourcesAndHeaders/src/my_lib/: CMakeLists.txt
